--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,15 +5,63 @@
 
 .header {
   background-color: $accent;
-
   &__inner {
     min-height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+  }
+  &__overlay {
+    position: absolute;
+    z-index: 2;
+    background-color: #fff;
+    top: 99%;
+    right: 11%;
+    border-radius: 4px;
+    display: none;
+  }
+  &__navbar {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    scroll-behavior: smooth;
+    a{
+      color: #2B4074;
+    }
+	}
+
+	&__navbar-item {
+    color: #fff;
+    margin: 1rem 0 1rem;
+    padding: 0 1rem;
+    font-size: 1.4rem;
+	}
+}
+//.header__overlay.active {
+//  display: block;
+//}
+@media (max-width: 480px){
+  .header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    margin-bottom: 30px;
+    &__overlay{
+      width: 115%;
+      left: 0;
+      margin-right: -20px;
+      margin-left: -20px;
+    }
+  }
+  .head{
+    margin-top: 75px;
   }
 }
-
 @media (min-width: 640px) {
   .header__inner {
     margin-left: 14px;
@@ -67,6 +115,7 @@
     }
   }
 }
+
 
 @media (min-width: 400px) {
   .menu__btn {
